fix white screen issue of dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,22 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root, body {
+:root,
+body {
   height: 100%;
-}
-
-/* beauty scrollbar */
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-::-webkit-scrollbar-track {
-  border-radius: 3px;
-  background: rgba(0,0,0,0.06);
-  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background: rgba(0,0,0,0.12);
-  -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
